--- a/blogspot.html
+++ b/blogspot.html
@@ -11,7 +11,7 @@
     <div id="container">
         <div id="post">
             <h1>Este es el titulo del Post Git</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore vel atque fugit, quaerat iste nostrum sunt sit sapiente assumenda? Inventore veniam maiores voluptatem nulla rerum doloremque, eum quas facere nam!</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore vel atque fugit, quaerat iste nostrum sunt sit sapiente assumenda? </p>
         </div>
     </div>
 </body>
