--- a/blogspot.html
+++ b/blogspot.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="container">
+        <div id="cabecera">
+            Cabecera
+        </div>
         <div id="post">
             <h1>Este es el titulo del Post Git</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore vel atque fugit, quaerat iste nostrum sunt sit sapiente assumenda? </p>
