--- a/blogspot.html
+++ b/blogspot.html
@@ -12,6 +12,7 @@
         <div id="post">
             <h1>Este es el titulo del Post Git</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore vel atque fugit, quaerat iste nostrum sunt sit sapiente assumenda? </p>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, provident deserunt iste alias est architecto neque vero aperiam harum, quod, minima iure! Explicabo earum esse ipsam possimus eum, delectus nesciunt!</p>
         </div>
     </div>
 </body>
