modifique la cabera y el color del texto

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,7 +10,7 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            SuperCabecera <span id="tagline"> Confianza en Ti Mismo</span>
+            SuperCabecera <span id="tagline"> Confianza en Yo Tu</span>
         </div>
         <div id="post">
             <h1>Este es el titulo del Post Git</h1>
