agrege suscripcion cambie cabecera y puse todo celeste

--- a/blogspot.html
+++ b/blogspot.html
@@ -10,12 +10,13 @@
 <body>
     <div id="container">
         <div id="cabecera">
-            SuperCabecera <span id="tagline"> Confianza en Ti Mismo</span>
+            SuperCabecera <span id="tagline"> Confianza en Tu Maestro</span>
         </div>
         <div id="post">
             <h1>Este es el titulo del Post Git</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore vel atque fugit, quaerat iste nostrum sunt sit sapiente assumenda? </p>
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, provident deserunt iste alias est architecto neque vero aperiam harum, quod, minima iure! Explicabo earum esse ipsam possimus eum, delectus nesciunt!</p>
+            <p>suscribete y dale like</p>
         </div>
     </div>
 </body>
