cabecera y Footer Terminado

--- a/blogspot.html
+++ b/blogspot.html
@@ -17,6 +17,10 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Possimus, provident deserunt iste alias est architecto neque vero aperiam harum, quod, minima iure! Explicabo earum esse ipsam possimus eum, delectus nesciunt!</p>
             <p>suscribete y dale like</p>
         </div>
+        <div id="footer">
+            Hecho Con Amor Para los Fans 
+        </div>
     </div>
+
 </body>
 </html>
